[Tentative] Fix github workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,7 @@ jobs:
         env:
           GOOS: ${{ matrix.targetos }}
           GOARCH: ${{ matrix.arch }}
+      - name: Compile go-bitsong
         run: |
           go mod download
           cd cmd/bitsongd
